Fix IDEX-663 : Redirect also the error stream on the output stream (also replace Runtime.exec by ProcessBuilder API)